--- a/spotifyclone/index.html
+++ b/spotifyclone/index.html
@@ -1,12 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>spotify</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <h1>hello</h1>
-</body>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="utility.css" />
+  </head>
+  <body>
+    <div class="container flex bg-black">
+      <div class="left">
+        <div class="home bg-grey rounded m-1 p-1">
+          <div class="logo invert">
+            <img src="logo.svg" alt="logo" />
+          </div>
+          <ul>
+            <li><img class="invert" src="home.svg" alt="home" />Home</li>
+            <li><img class="invert" src="search.svg" alt="search" />search</li>
+          </ul>
+        </div>
+        <div class="library bg-grey rounded bg-grey p-1">
+          <div class="heading">
+              <img class="invert" src="playlist.svg" alt="playlist" />
+              <h2>your library</h2>
+            
+          </div>
+          <div class="footer">
+            <div><a href="https://www.spotify.com/jp/legal/"><span>Legal</span></a></div>
+            <div><a href="https://www.spotify.com/jp/privacy/"><span>Privacy Center</span></a></div>
+            <div><a href="https://www.spotify.com/jp/legal/privacy-policy/"><span>Privacy Policy</span></a>
+            </div>
+            <div><a href="https://www.spotify.com/jp/legal/cookies-policy/"><span>Cookies</span></a></div>
+            <div><a href="https://www.spotify.com/jp/legal/privacy-policy/#s3"><span>About Ads</span></a></div>
+            <div><a href="https://www.spotify.com/jp/accessibility/"><span>Accessibility</span></a></div>
+        </div>
+        </div>
+        
+      </div>
+      <div class="right border">
+        <div class="header">
+            <div class="nav"></div>
+            <div class="buttons">
+                <button class="signup">signup</button>
+                <button class="login">login</button>
+            </div>
+        </div>
+
+      </div>
+    </div>
+  </body>
 </html>
