update index.html title and add favicon; enhance script.js for song fetching and UI improvements

--- a/spotifyclone/index.html
+++ b/spotifyclone/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>spotify</title>
+    <title>Spotify-web player:music player</title>
+    <link rel="icon" type="image/x-icon" href="https://open.spotifycdn.com/cdn/images/error-page-logo.24aca703.svg">
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="utility.css" />
   </head>
@@ -467,12 +468,15 @@
             </div>
           </div>
           <div class="playbar">
+            <div class="seekbar">
+              <div class="circle"></div>
+            </div>
             <div class="songsinfo"></div>
             <div class="songsbuttons">
               <img src="prevsong.svg" alt="previos_song" />
               <img src="play.svg" alt="pause" />
               <img src="nextsong.svg" alt="next" />
-              <img src="" alt="" />
+              
             </div>
             <div class="time"></div>
           </div>
