--- a/js_calculator/index.html
+++ b/js_calculator/index.html
@@ -34,7 +34,7 @@
     <button type ="button">1</button>
     <button type ="button">2</button>
     <button type ="button">3</button>
-    <button type ="button" class="opr">/</button>
+    <button type ="button" class="opr">-</button>
     </div>
     <div class="row">
     <button type ="button" >00</buttons>
