add Tic Tac Toe game: implement HTML structure, CSS styling, and JavaScript functionality

--- a/TicTackTow/index.html
+++ b/TicTackTow/index.html
@@ -2,12 +2,35 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="./styles.css">
-    <title>RPG - Dragon Repeller</title>
-    <script src="./script.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <title>Tik-tac-toe</title>
+  
   </head>
   <body>
+    <div class="msgContainer hide">
+      <p id="msg" >Winner</p>
+      <button id="newGame">New Game</button>
+    </div>
+    <main>
+      <h1>Tic-Tac-Toe</h1>
+   <div class="container">
+    <div class="game">
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
+      <button class="box"></button>
     
+     
+    </div>
+   </div>
+   <button class="reset">Reset</button>
+    </main>
    
   </body>
+  <script src="script.js"></script>
 </html>
